统一实现标题、下划线实现方法

--- a/pages/Ins2.html
+++ b/pages/Ins2.html
@@ -138,7 +138,8 @@
                         机构设置
                     </div>
                     <div class="colu_news">
-
+                            <img src="../images/Ins_2_img.jpg" alt="">
+                            
 
                     </div>
                 </div>
