--- a/pages/Ins3.html
+++ b/pages/Ins3.html
@@ -236,10 +236,9 @@
 
 
             <div class="detail_colu">
-                <div class="colu_name">
-                    <h3>热门人物</h3>
+                <div class="part-title">
+                    热门人物
                 </div>
-                <div class="colu_line"></div>
                 <div class="personList">
                     <a class="list_item" href="">
                     <img class="list_img" src="../images/Ins_img.jpg" alt="图片加载失败" title="7七月"><br>
