--- a/pages/academic1.html
+++ b/pages/academic1.html
@@ -134,8 +134,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">来访交流</a>
+                <div class="part-title">
+                    来访交流
                 </div>
                 <div class="detail">
                     <ul>
