--- a/pages/academic2.html
+++ b/pages/academic2.html
@@ -134,8 +134,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">调研考察</a>
+                <div class="part-title">
+                    调研考察
                 </div>
                 <div class="detail">
                     <ul>
