--- a/pages/academic3.html
+++ b/pages/academic3.html
@@ -134,8 +134,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">主办年会</a>
+                <div class="part-title">
+                    主办年会
                 </div>
                 <div class="detail">
                     <ul>
