--- a/pages/archi1.html
+++ b/pages/archi1.html
@@ -131,8 +131,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">学术论文</a>
+                <div class="part-title">
+                    学术论文
                 </div>
                 <div class="detail">
                     <ul>
