--- a/pages/archi3.html
+++ b/pages/archi3.html
@@ -225,8 +225,8 @@
                             </div>
 
                             <div class="boxRight">
-                                <div class="tit">
-                                    <a href="#">研究报告</a>
+                                <div class="part-title">
+                                    研究报告
                                 </div>
                                 <div class="detail">
                                     <ul>
