--- a/pages/construct2.html
+++ b/pages/construct2.html
@@ -128,8 +128,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">智库动态</a>
+                <div class="part-title">
+                   智库动态
                 </div>
                 <div class="detail">
                     <ul>
