--- a/pages/consult1.html
+++ b/pages/consult1.html
@@ -131,8 +131,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">咨询顾问</a>
+                <div class="part-title">
+                   咨询顾问
                 </div>
                 <div class="detail">
                     <ul>
