--- a/pages/consult2.html
+++ b/pages/consult2.html
@@ -131,8 +131,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">企业策划</a>
+                <div class="part-title">
+                    企业策划
                 </div>
                 <div class="detail">
                     <ul>
