--- a/pages/consult3.html
+++ b/pages/consult3.html
@@ -131,8 +131,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">专家培训</a>
+                <div class="part-title">
+                    专家培训
                 </div>
                 <div class="detail">
                     <ul>
