--- a/pages/research1.html
+++ b/pages/research1.html
@@ -131,8 +131,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">课题研究</a>
+                <div class="part-title">
+                    课题研究
                 </div>
                 <div class="detail">
                     <ul>
