--- a/pages/research2.html
+++ b/pages/research2.html
@@ -131,8 +131,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">课题招标</a>
+                <div class="part-title">
+                    课题招标
                 </div>
                 <div class="detail">
                     <ul>
