--- a/pages/academic4.html
+++ b/pages/academic4.html
@@ -134,8 +134,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">流通论坛</a>
+                <div class="part-title">
+                    流通论坛
                 </div>
                 <div class="detail">
                     <ul>
