--- a/pages/archi2.html
+++ b/pages/archi2.html
@@ -132,8 +132,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">著作</a>
+                <div class="part-title">
+                   著作
                 </div>
                 <div class="">
                     <ul class='detail-box'>
