--- a/pages/construct1.html
+++ b/pages/construct1.html
@@ -128,8 +128,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">名家百人讲座</a>
+                <div class="part-title">
+                    名家百人讲座
                 </div>
                 <div class="detail">
                     <ul>
