--- a/pages/news1.html
+++ b/pages/news1.html
@@ -130,8 +130,8 @@
             <div class='boxRight'>
                 <!--详情页-->
 
-                <div class="tit">
-                    <a href="#">流通所新闻</a>
+                <div class="part-title">
+                    流通所新闻
                 </div>
                 <div class="detail">
                     <ul>
