--- a/pages/news3.html
+++ b/pages/news3.html
@@ -131,8 +131,9 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">流通所新闻</a>
+                    <div class="part-title">
+                            
+                    流通所新闻
                 </div>
                 <div class="detail">
                     <ul>
