--- a/pages/research3.html
+++ b/pages/research3.html
@@ -131,8 +131,8 @@
             </div>
 
             <div class="boxRight">
-                <div class="tit">
-                    <a href="#">成果影响</a>
+                <div class="part-title">
+                    成果影响
                 </div>
                 <div class="detail">
                     <ul>
