--- a/pages/archi3.html
+++ b/pages/archi3.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <<<<<<< HEAD <header>
+<header>
         <div class='logo'>
             <a href="index.html">
                 <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
