--- a/info/info.html
+++ b/info/info.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class='logo'> 
-            <a href="index.html">             
+            <a href="../index.html">
             <img src='../images/logo.png' alt="流通研究所" class='logo_img'>
           </a> </div>
         <ul class='nav_box'>
@@ -22,7 +22,7 @@
                 <div class='item_content'> <a href='ins1.html'>简介</a> <a href='ins2.html'>机构设置</a> <a href='ins3.html'>研究方向</a> <a href='ins4.html'>专家团队</a>                    </div>
             </li>
             <li class='nav_item'> <a href=''>                        科研资讯                        <i class='nav_icon'></i>                                            </a>
-                <div class='item_content'> <a href='news1.html'>流通所新闻</a> <a href='news2.html'>基地资讯</a> <a href='new3.html'>媒体报道</a> </div>
+                <div class='item_content'> <a href='news1.html'>流通所新闻</a> <a href='news2.html'>基地资讯</a> <a href='news3.html'>媒体报道</a> </div>
             </li>
             <li class='nav_item'> <a href=''>科学研究<i class='nav_icon'></i></a>
                 <div class='item_content'> <a href='research1.html'>课题研究</a> <a href='research2.html'>课题招标</a> <a href='research3.html'>成果影响</a> </div>
