--- a/pages/archi2.html
+++ b/pages/archi2.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class='logo'>
-            <a href="index.html">
+            <a href="../index.html">
                 <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
         </div>
         <ul class='nav_box'>
@@ -41,7 +41,7 @@
                 <div class='item_content'>
                     <a href='news1.html'>流通所新闻</a>
                     <a href='news2.html'>基地资讯</a>
-                    <a href='new3.html'>媒体报道</a>
+                    <a href='news3.html'>媒体报道</a>
                 </div>
             </li>
             <li class='nav_item'>
