--- a/pages/archi3.html
+++ b/pages/archi3.html
@@ -17,177 +17,88 @@
 
 <body>
 <header>
-        <div class='logo'>
-            <a href="index.html">
-                <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
-        </div>
-        <ul class='nav_box'>
-            <li class='nav_item'>
-                <a href=''> 机构介绍
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='ins_1.html'>简介</a>
-                    <a href='ins_2.html'>机构设置</a>
-                    <a href='ins_3.html'>研究方向</a>
-                    <a href='ins_4.html'>专家团队</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''> 科研资讯
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='news1.html'>流通所新闻</a>
-                    <a href='news2.html'>基地资讯</a>
-                    <a href='new3.html'>媒体报道</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>科学研究
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='research1.html'>课题研究</a>
-                    <a href='research2.html'>课题招标</a>
-                    <a href='research3.html'>成果影响</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>科研成果
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='archi1.html'>学术论文</a>
-                    <a href='archi2.html'>著作</a>
-                    <a href='archi3.html'>研究报告</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>学术交流
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='academic1.html'>来访交流</a>
-                    <a href='academic2.html'>调研考察</a>
-                    <a href='academic3.html'>主办年会</a>
-                    <a href='academic4.html'>流通论坛</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>咨询培训
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='consult1.html'>咨询顾问</a>
-                    <a href='consult2.html'>企业策划</a>
-                    <a href='consult3.html'>专家培训</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>智库建设
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='construct1.html'>名家百人讲座</a>
-                    <a href='construct2.html'>智库动态</a>
-                </div>
-            </li>
-        </ul>
-        </header>
+    <div class='logo'>
+        <a href="../index.html">
+            <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
+    </div>
+    <ul class='nav_box'>
+        <li class='nav_item'>
+            <a href=''> 机构介绍
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='ins1.html'>简介</a>
+                <a href='ins2.html'>机构设置</a>
+                <a href='ins3.html'>研究方向</a>
+                <a href='ins4.html'>专家团队</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''> 科研资讯
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='news1.html'>流通所新闻</a>
+                <a href='news2.html'>基地资讯</a>
+                <a href='news3.html'>媒体报道</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>科学研究
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='research1.html'>课题研究</a>
+                <a href='research2.html'>课题招标</a>
+                <a href='research3.html'>成果影响</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>科研成果
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='archi1.html'>学术论文</a>
+                <a href='archi2.html'>著作</a>
+                <a href='archi3.html'>研究报告</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>学术交流
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='academic1.html'>来访交流</a>
+                <a href='academic2.html'>调研考察</a>
+                <a href='academic3.html'>主办年会</a>
+                <a href='academic4.html'>流通论坛</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>咨询培训
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='consult1.html'>咨询顾问</a>
+                <a href='consult2.html'>企业策划</a>
+                <a href='consult3.html'>专家培训</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>智库建设
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='construct1.html'>名家百人讲座</a>
+                <a href='construct2.html'>智库动态</a>
+            </div>
+        </li>
+    </ul>
+</header>
         <div class="container">
             <!--左侧-->
             <div class='container-types'>
-                <div class="boxLeft">
-                    <!--左侧导航栏上面的装饰-->
-                    <div class="navTop">
-                        <div class="image">
-                            <img src="../images/research1.png" alt="">
-                        </div>
-                        <div class="line">
-                            <a href="#">科研成果</a>
-                        </div>
-                    </div>
-                    =======
-                    <header>
-                        <div class='logo'>
-                            <a href="index.html">
-                                <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
-                        </div>
-                        <ul class='nav_box'>
-                            <li class='nav_item'>
-                                <a href=''> 机构介绍
-                                    <i class='nav_icon'></i>
-                                </a>
-                                <div class='item_content'>
-                                    <a href='ins1.html'>简介</a>
-                                    <a href='ins2.html'>机构设置</a>
-                                    <a href='ins3.html'>研究方向</a>
-                                    <a href='ins4.html'>专家团队</a>
-                                </div>
-                            </li>
-                            <li class='nav_item'>
-                                <a href=''> 科研资讯
-                                    <i class='nav_icon'></i>
-                                </a>
-                                <div class='item_content'>
-                                    <a href='news1.html'>流通所新闻</a>
-                                    <a href='news2.html'>基地资讯</a>
-                                    <a href='new3.html'>媒体报道</a>
-                                </div>
-                            </li>
-                            <li class='nav_item'>
-                                <a href=''>科学研究
-                                    <i class='nav_icon'></i>
-                                </a>
-                                <div class='item_content'>
-                                    <a href='research1.html'>课题研究</a>
-                                    <a href='research2.html'>课题招标</a>
-                                    <a href='research3.html'>成果影响</a>
-                                </div>
-                            </li>
-                            <li class='nav_item'>
-                                <a href=''>科研成果
-                                    <i class='nav_icon'></i>
-                                </a>
-                                <div class='item_content'>
-                                    <a href='archi1.html'>学术论文</a>
-                                    <a href='archi2.html'>著作</a>
-                                    <a href='archi3.html'>研究报告</a>
-                                </div>
-                            </li>
-                            <li class='nav_item'>
-                                <a href=''>学术交流
-                                    <i class='nav_icon'></i>
-                                </a>
-                                <div class='item_content'>
-                                    <a href='academic1.html'>来访交流</a>
-                                    <a href='academic2.html'>调研考察</a>
-                                    <a href='academic3.html'>主办年会</a>
-                                    <a href='academic4.html'>流通论坛</a>
-                                </div>
-                            </li>
-                            <li class='nav_item'>
-                                <a href=''>咨询培训
-                                    <i class='nav_icon'></i>
-                                </a>
-                                <div class='item_content'>
-                                    <a href='consult1.html'>咨询顾问</a>
-                                    <a href='consult2.html'>企业策划</a>
-                                    <a href='consult3.html'>专家培训</a>
-                                </div>
-                            </li>
-                            <li class='nav_item'>
-                                <a href=''>智库建设
-                                    <i class='nav_icon'></i>
-                                </a>
-                                <div class='item_content'>
-                                    <a href='construct1.html'>名家百人讲座</a>
-                                    <a href='construct2.html'>智库动态</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </header>
+
                     <div class="container">
                         <!--左侧-->
                         <div class='container-types'>
@@ -201,8 +112,6 @@
                                         <a href="#">科研成果</a>
                                     </div>
                                 </div>
-                                >>>>>>> 23b8c4132b4f01109f18a8e04465898d5f434287
-
                                 <!--左侧导航栏-->
                                 <ul class="itemUl">
                                     <li class="itemLi">
