--- a/pages/news1.html
+++ b/pages/news1.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class='logo'>
-            <a href="index.html">
+            <a href="../index.html">
                 <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
         </div>
         <ul class='nav_box'>
@@ -39,7 +39,7 @@
                 <div class='item_content'>
                     <a href='news1.html'>流通所新闻</a>
                     <a href='news2.html'>基地资讯</a>
-                    <a href='new3.html'>媒体报道</a>
+                    <a href='news3.html'>媒体报道</a>
                 </div>
             </li>
             <li class='nav_item'>
