--- a/info/info.html
+++ b/info/info.html
@@ -33,7 +33,7 @@
             <li class='nav_item'> <a href=''>学术交流<i class='nav_icon'></i></a>
                 <div class='item_content'> <a href='academic1.html'>来访交流</a> <a href='academic2.html'>调研考察</a> <a href='academic3.html'>主办年会</a>
                     <a
-                        href='1academic4.html'>流通论坛</a>
+                        href='academic4.html'>流通论坛</a>
                 </div>
             </li>
             <li class='nav_item'> <a href=''>咨询培训<i class='nav_icon'></i></a>
