咨询详情页增加了点赞动画，将getTop.js移到common.js

--- a/pages/construct1.html
+++ b/pages/construct1.html
@@ -164,8 +164,7 @@
                             <a href="#">名家百人讲座10 </a>
                         </li>
                         <li>
-                            <a href="#">名家百人讲座11
-                                <a>
+                            <a href="#">名家百人讲座11</a>
                         </li>
                         <li>
                             <a href="#">名家百人讲座12 </a>
