--- a/pages/academic2.html
+++ b/pages/academic2.html
@@ -27,10 +27,10 @@
                     <i class='nav_icon'></i>
                 </a>
                 <div class='item_content'>
-                    <a href='ins_1.html'>简介</a>
-                    <a href='ins_2.html'>机构设置</a>
-                    <a href='ins_3.html'>研究方向</a>
-                    <a href='ins_4.html'>专家团队</a>
+                    <a href='lns1.html'>简介</a>
+                    <a href='lns2.html'>机构设置</a>
+                    <a href='lns3.html'>研究方向</a>
+                    <a href='lns4.html'>专家团队</a>
                 </div>
             </li>
             <li class='nav_item'>
