增加人物详情页

--- a/pages/Ins3.html
+++ b/pages/Ins3.html
@@ -240,20 +240,20 @@
                     热门人物
                 </div>
                 <div class="personList">
-                    <a class="list_item" href="">
-                    <img class="list_img" src="../images/Ins_img.jpg" alt="图片加载失败" title="7七月"><br>
+                    <a class="list_item" href="../info/person1.html">
+                    <img class="list_img" src="../images/Ins_img_1.jpg" alt="图片加载失败" title="7七月"><br>
                     <span class="list_name">韦琦</span>
                     <span class="list_title">副教授</span>
                     <span class="list_content">韦琦，女，广西鹿寨人，博士，广东财经大学工商管理学院副教授，中山大学中国第三产业研究中心特约研究员，广州市现代物流与电子商务发展研究基地兼职研究员</span>
                 </a>
-                    <a class="list_item" href="">
+                    <a class="list_item" href="../info/person2.html">
                     <img class="list_img" src="../images/Ins_img_2.jpg" alt="图片加载失败" title="7七月"><br>
                     <span class="list_name">阳明明</span>
                     <span class="list_title">博士</span>
                     <span class="list_content">广东财经大学工商管理学院教师，管理科学与工程博士，广州市现代物流与电子商务发展研究基地兼职研究员
                         </span>
                 </a>
-                    <a class="list_item" href="">
+                    <a class="list_item" href="../info/person1.html">
                     <img class="list_img" src="../images/Ins_img_3.jpg" alt="图片加载失败" title="7七月"><br>
                     <span class="list_name">郭佳</span>
                     <span class="list_title">博士</span>
