人物详情页更改

--- a/info/person1.html
+++ b/info/person1.html
@@ -47,6 +47,9 @@
 
         <div class="detail">
             <div class="top">
+                <div class="top-img">
+                    <img src="../images/Ins_img_1.jpg" alt="">
+                </div>
                 <div class="cont">        
                     <span class="name">韦琦</span>
                     <span class="title">副教授,博士</span>
@@ -56,7 +59,7 @@
                             中山大学中国第三产业研究中心特约研究员<br>
                     </span>
                </div>
-               <img src="../images/Ins_img_1.jpg" alt="">
+               
                 
             </div>
 
