--- a/info/person2.html
+++ b/info/person2.html
@@ -47,6 +47,9 @@
 
         <div class="detail">
             <div class="top">
+                <div class="top-img">
+                        <img src="../images/Ins_img_2.jpg" alt="">
+                </div>
                 <div class="cont">        
                     <span class="name">阳明明</span>
                     <span class="title">博士</span>
@@ -56,7 +59,7 @@
                         广州市现代物流与电子商务发展研究基地兼职研究员<br>
                     </span>
                </div>
-               <img src="../images/Ins_img_2.jpg" alt="">
+              
                 
             </div>
 
