--- a/info/person3.html
+++ b/info/person3.html
@@ -47,6 +47,9 @@
 
         <div class="detail">
             <div class="top">
+                <div class="top-img">
+                    <img src="../images/Ins_img_3.jpg" alt="">
+                </div>
                 <div class="cont">        
                     <span class="name">郭佳</span>
                     <span class="title">博士</span>
@@ -56,7 +59,7 @@
                             毕业于中山大学岭南学院,获管理学博士学位<br>
                     </span>
                </div>
-               <img src="../images/Ins_img_3.jpg" alt="">
+             
                 
             </div>
 
