修改主页，兼容ie

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>lts</title>
-    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery-1.11.min.js"></script>
     <script src='js/unslider.min.js'></script>
     <script src='js/index.js'></script>
     <script src='js/common.js'></script> 
@@ -145,7 +145,7 @@
                             <a href='#'>“温氏模式创新与温氏生鲜食品流通体系构建”研讨会召开</a>
                         </li>
                         <li class='new-item'>
-                            <a href='#'>“温氏模式创新与温氏生鲜食品流通体系构建”研讨会召开</a>
+                            <a href='#'>“温氏模式创新与温氏生鲜食品流通体系构建”研讨会召开“温氏模式创新与温氏生鲜食品流通体系构建”研讨会召开“温氏模式创新与温氏生鲜食品流通体系构建”研讨会召开“温氏模式创新与温氏生鲜食品流通体系构建”研讨会召开“温氏模式创新与温氏生鲜食品流通体系构建”研讨会召开</a>
                         </li>
                         <li class='new-item'>
                             <a href='#'>“温氏模式创新与温氏生鲜食品流通体系构建”研讨会召开</a>
@@ -228,11 +228,12 @@
                                     <p>点击进入</p>
                                 </div>
                             </a>
-                        </div>
+                        </p>
                     </div>
 
                 </div>
             </div>
+           </div>
             <div class='mixRight'>
 
                 <a class='pic-box pic-box1' href="#">
@@ -251,6 +252,7 @@
                 </a>
 
             </div>
+            
         </section>
         <!--咨询培训、智库建设-->
         <section class='container-types train'>
@@ -267,7 +269,6 @@
                             <div class='card-content-inner'>
                                 <p>
                                     王先庆给2016年顺德商会协会秘书长培训班授课
-
                                 </p>
                             </div>
                         </div>
@@ -351,7 +352,7 @@
                         <div class='card-content'>
                             <div class='card-content-inner'>
                                 <p>
-                                    王先庆给商务部第十四期商贸物流与“互联网+物流”研修班授课
+                                    王先庆给商务部第十四期商贸物流与"互联网+物流"研修班授课
                                 </p>
                             </div>
                         </div>
